schedule bug squashed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -627,15 +627,16 @@ height: 12em
 /*schedule*/
 
 #schedule {
-margin: -2em 0 0 0 ;
-background-color: #c2ff46 /*color4*/
+margin: 0 ;
+background-color: #c2ff46; /*color4*/
+padding-top: 1em
 }
 
 #schedule table {
-width: 70%;
-margin: 2em auto 0 auto;
-color: #fffefe /*color3*/
-
+width: 80%;
+margin: 0 auto 0 auto;
+color: #fffefe; /*color3*/
+padding-top: 2em
 }
 
 #schedule table th {
